--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,7 @@
               <strictCheck>true</strictCheck>
               <aggregate>true</aggregate>
               <excludes>
-                <exclude>LICENSE.txt</exclude>
+                <exclude>*.txt</exclude>
                 <exclude>**/.dontdelete</exclude>
                 <exclude>measurements*.txt</exclude>
               </excludes>
