#63 CI build should fail if formatting is incorrect

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,26 @@
   </build>
   <profiles>
     <profile>
+      <id>ci</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>net.revelc.code.formatter</groupId>
+            <artifactId>formatter-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>validate-format</id>
+                <goals>
+                  <goal>validate</goal>
+                </goals>
+                <phase>validate</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>qa</id>
       <activation>
         <property>
