--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,3 +47,12 @@ jobs:
 
       - name: 'Build project'
         run: mvn -B clean verify -Pci
+
+      - name: 'Setup SDKMAN'
+        uses: sdkman/sdkman-action@b1f9b696c79148b66d3d3a06f7ea801820318d0f
+        id: sdkman
+        if: github.event_name == 'pull_request'
+
+      - name: 'Test submission'
+        run: ./test.sh ${{ github.event.pull_request.user.login }}
+        if: github.event_name == 'pull_request'
