--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,7 @@
                 <exclude>**/measurements*.txt</exclude>
                 <exclude>**/measurements*.out</exclude>
                 <exclude>out_expected.txt</exclude>
+                <exclude>.sdkmanrc</exclude>
               </excludes>
             </configuration>
             <executions>
