--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
                 <exclude>**/.dontdelete</exclude>
                 <exclude>**/measurements*.txt</exclude>
                 <exclude>**/measurements*.out</exclude>
-                <exclude>out_expected.txt</exclude>
+                <exclude>out_expected*.txt</exclude>
                 <exclude>github_users.txt</exclude>
                 <!-- Cliff asked to be named as the copyright holder for his entry; -->
                 <exclude>src/main/java/dev/morling/onebrc/CalculateAverage_cliffclick.java</exclude>
