#104 Run tests for the user creating the PR and validate that the calculate file exists for the user
Also install all available SDks before running the tests

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,7 @@
                 <exclude>github_users.txt</exclude>
                 <!-- Cliff asked to be named as the copyright holder for his entry; -->
                 <exclude>src/main/java/dev/morling/onebrc/CalculateAverage_cliffclick.java</exclude>
+                <exclude>.sdkmanrc</exclude>
               </excludes>
             </configuration>
             <executions>
