--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,8 @@
                 <!-- Cliff asked to be named as the copyright holder for his entry; -->
                 <exclude>src/main/java/dev/morling/onebrc/CalculateAverage_cliffclick.java</exclude>
                 <exclude>.sdkmanrc</exclude>
+                <exclude>data/weather_stations.csv</exclude>
+                <exclude>available_sdks.txt</exclude>
               </excludes>
             </configuration>
             <executions>
