off-the-shelf Java components + ArraysSupport..
laptop results are around 10.2 seconds, e.g:
./calculate_average_3j5a.sh  75.02s user 1.31s system 750% cpu 10.175 total

Architecture:            x86_64
  CPU op-mode(s):        32-bit, 64-bit
  Address sizes:         39 bits physical, 48 bits virtual
  Byte Order:            Little Endian
CPU(s):                  8
  On-line CPU(s) list:   0-7
Vendor ID:               GenuineIntel
  Model name:            Intel(R) Core(TM) i5-8400H CPU @ 2.50GHz

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,9 @@
   
   <properties>
     <maven.compiler.parameters>true</maven.compiler.parameters>
-    <maven.compiler.release>21</maven.compiler.release>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.release></maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -113,6 +115,7 @@
               <compilerArg>java.base,jdk.incubator.vector</compilerArg>
               <compilerArg>--add-opens=java.base/java.lang=ALL-UNNAMED</compilerArg>
               <compilerArg>--add-opens=java.base/jdk.internal.util=ALL-UNNAMED</compilerArg>
+              <compilerArg>--add-exports=java.base/jdk.internal.util=ALL-UNNAMED</compilerArg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -259,7 +262,7 @@
                 <configuration>
                   <rules>
                     <requireJavaVersion>
-                      <version>${maven.compiler.release}</version>
+                      <version>21</version>
                     </requireJavaVersion>
                     <requirePluginVersions>
                        <banLatest>true</banLatest>
